# ledboard-control-app

./: .gitignore  README.md  buildozer.spec  pyproject.toml
ledboardcontrolapp/: main.py  pong.kv
