[build-system]
requires = [
  "kivy[base]",
  "pyserial",
  "ledboardclientfull@git+https://github.com/MrFrangipane/led-client-full"
]
build-backend = "setuptools.build_meta"

[project]
name = "ledboardcontrolapp"
description = "LED Board Control App"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  { name = "Frangitron", email = "contact@frangitron.com" }
]
maintainers = [
  { name = "Frangitron", email = "contact@frangitron.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
]
keywords = ["python", "frangitron"]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true

[tool.hatch.metadata]
allow-direct-references = true
