[build-system]
requires = [
  "setuptools",
  "kivy[base]",
  "ledboardlib@git+https://github.com/Frangitron/ledboard-lib",
]

[project]
name = "ledboardcontrolapp"
description = "LED Board Control App"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  { name = "Frangitron", email = "contact@frangitron.com" }
]
maintainers = [
  { name = "Frangitron", email = "contact@frangitron.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
]
keywords = ["python", "frangitron"]
dynamic = ["version"]
